--- a/src/components/list/list.component.scss
+++ b/src/components/list/list.component.scss
@@ -68,3 +68,113 @@
 .item:hover {
     background-color: aliceblue;
 }
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal {
+    width: 30%;
+    height: 70%;
+    background-color: white;
+    border-radius: 8px;
+    padding: 2rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.modalHeader {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    
+    & p {
+        font-size: large;
+        font-weight: bold;
+    }
+
+    & button {
+        background-color: transparent;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        font-size: large;
+        font-weight: bold;
+    }
+}
+
+.modalContent {
+    width: 100%;
+    height: 100%;
+    gap: 1.5rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+    & section {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 0.5rem;
+    }
+
+    & div {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    & label {
+        font-weight: 100;
+        width: 200px;
+    }
+
+    & input {
+        width: 100%;
+        border: none;
+        outline: none;
+        border-radius: 8px;
+        background-color: rgb(210, 212, 255);
+        padding: 0.5rem;
+    }
+}
+
+.modalFooter {
+    width: 100%;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-end;
+
+    & button {
+        background-color: rgb(210, 212, 255);
+        border: none;
+        outline: none;
+        cursor: pointer;
+        font-size: medium;
+        font-weight: bold;
+        padding: 0.5rem;
+        border-radius: 8px;
+    }
+}
