--- a/src/components/list/list.component.scss
+++ b/src/components/list/list.component.scss
@@ -48,6 +48,7 @@
     overflow-y: scroll;
     border-radius: 8px;
     background-color: white;
+    list-style: none;
 }
 
 .item {
@@ -58,15 +59,65 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    gap: 1rem;
 
     padding: 0 1rem;
     border-bottom: solid 1px rgb(210, 210, 210);
-    cursor: pointer;
-    list-style: none;
+
+    & input {
+        width: 1.3em;
+        height: 1.3em;
+
+        background-color: white;
+        border-radius: 50%;
+        border: 1px solid #ddd;
+        
+        vertical-align: middle;
+        appearance: none;
+        -webkit-appearance: none;
+        outline: none;
+        cursor: pointer;
+    }
+    & input:checked {
+        background-color: wheat;
+    }
+
+    & label {
+        cursor: pointer;
+    }
 }
 
 .item:hover {
     background-color: aliceblue;
+}
+
+.add {
+    width: 100%;
+    height: 50px;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1rem;
+
+    padding: 0 1rem;
+    border-bottom: solid 1px rgb(210, 210, 210);
+
+    & input {
+        width: 100%;
+        border: none;
+        outline: none;
+        cursor: text;
+    }
+
+    & label {
+        width: 1.3em;
+        height: 1.3em;
+        text-align: center;
+        vertical-align: middle;
+        font-weight: bold;
+    }
 }
 
 .backdrop {
