--- a/src/components/list/list.component.scss
+++ b/src/components/list/list.component.scss
@@ -65,8 +65,8 @@
     border-bottom: solid 1px rgb(210, 210, 210);
 
     & input {
-        width: 1.3em;
-        height: 1.3em;
+        width: 2em;
+        height: 2em;
 
         background-color: white;
         border-radius: 50%;
@@ -84,6 +84,24 @@
 
     & label {
         cursor: pointer;
+    }
+
+    & button {
+        border: none;
+        outline: none;
+        background-color: transparent;
+        cursor: pointer;
+        border-radius: 50%;
+        margin-left: auto;
+        width: 1.3em;
+        height: 1.3em;
+
+        text-align: center;
+        vertical-align: middle;
+    };
+
+    & button:hover {
+        background-color: rgb(255, 183, 183);
     }
 }
 
@@ -223,7 +241,7 @@
         border: none;
         outline: none;
         cursor: pointer;
-        font-size: medium;
+        font-size: small;
         font-weight: bold;
         padding: 0.5rem;
         border-radius: 8px;
