--- a/src/components/calendar/calendar.component.scss
+++ b/src/components/calendar/calendar.component.scss
@@ -5,8 +5,8 @@
 }
 
 .view {
-    width: 450px;
-    height: 300px;
+    width: 400px;
+    height: 350px;
 }
 
 .header {
@@ -22,6 +22,7 @@
 
     & button {
         font-weight: bold;
+        text-transform: uppercase;
 
         border:none;
         outline:none;
@@ -40,33 +41,47 @@
 
     border-radius: 8px;
     background-color: white;
-}
-
-.weekdays {
-    width: 100%;
-    height: 50px;
+    padding: 0.5rem 1rem;
 
     display: flex;
-    flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    flex-wrap: wrap;
 
-    border-bottom: solid 1px rgb(210, 210, 210);
-
-    & p {
+    & div {
         width: calc(100%/7);
-        height: 50px;
+        aspect-ratio: 1;
 
         display: flex;
-        flex-direction: row;
         justify-content: center;
         align-items: center;
-
-        border-right: solid 1px rgb(210, 210, 210);
     }
 
-    & p:last-child {
-        border-right: none;
+    & .day {
+        text-transform: uppercase;
+        font-weight: bold;
     }
 
+    & .date {
+        cursor: pointer;
+
+    }
+
+    & .date-current {
+        border-radius: 50%;
+        background-color: rebeccapurple;
+        color: white;
+        padding: 8px;
+    }
+
+    & .date-selected {
+        border-radius: 50%;
+        background-color: green;
+        color: white;
+        padding: 8px;
+    }
+
+    & .date-hidden {
+        display: none;
+    }
 }
