--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,6 +20,7 @@
     align-items: center;
 
     background-color: wheat;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
     & h1 {
         font-size: larger;
