--- a/src/components/actions/actions.component.scss
+++ b/src/components/actions/actions.component.scss
@@ -4,7 +4,6 @@
 
 .view {
     width: 450px;
-
     display: flex;
     flex-direction: column;
 }
@@ -38,13 +37,14 @@
 
     border-radius: 8px;
     background-color: white;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .button {
     border: none;
     background-color: none;
     text-decoration: none;
-    
+
     width: 65px;
     height: 65px;
     margin-right: 1rem;
@@ -53,14 +53,14 @@
     font-size: x-small;
     font-weight: bold;
     cursor: pointer;
-    background-color: rgb(192, 228, 255);
-
+    background-color: rgb(255, 245, 219);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .button:last-child {
     margin-right: none;
 }
 
-.button:hover {
-    background-color: rgb(242, 192, 255);
+.button-selected {
+    background-color: wheat;
 }
