--- a/src/components/list/list.component.html
+++ b/src/components/list/list.component.html
@@ -3,10 +3,9 @@
         <p>AGENDA</p>
     </div>
     <ol class="list">
-        <li class="item" *ngFor="let item of events">
+        <li class="item" *ngFor="let item of readItems()">
             <input type="checkbox" id={{item.id}} (click)="onCheckedHandler($event)" />
             <label (click)="onSelectHandler(item.id)"> {{item.title}} </label>
-            <button (click)="deleteHandler(item.id)">x</button>
         </li>
         <li class="add">
             <label for="add"> + </label>
@@ -53,6 +52,7 @@
             </section>
             </div>
             <div class="modalFooter">
+                <button (click)="deleteHandler(selectedItem.id)">DELETE</button>
                 <button (click)="onSaveHandler(selectedItem)">SAVE</button>
             </div>
         </div>
