--- a/src/components/list/list.component.scss
+++ b/src/components/list/list.component.scss
@@ -49,6 +49,7 @@
     border-radius: 8px;
     background-color: white;
     list-style: none;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .item {
@@ -85,28 +86,6 @@
     & label {
         cursor: pointer;
     }
-
-    & button {
-        border: none;
-        outline: none;
-        background-color: transparent;
-        cursor: pointer;
-        border-radius: 50%;
-        margin-left: auto;
-        width: 1.3em;
-        height: 1.3em;
-
-        text-align: center;
-        vertical-align: middle;
-    };
-
-    & button:hover {
-        background-color: rgb(255, 183, 183);
-    }
-}
-
-.item:hover {
-    background-color: aliceblue;
 }
 
 .add {
@@ -233,7 +212,7 @@
     
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: flex-end;
 
     & button {
