--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,12 @@
 .app {
     width: 100%;
-    height: 110vh;
 
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
 
-    background-color: rgb(255, 245, 219);
+    background-color: #e6e8ec;
 }
 
 .header {
@@ -19,7 +18,7 @@
     justify-content: flex-start;
     align-items: center;
 
-    background-color: wheat;
+    background-color: #f5f6f8;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
     & h1 {
@@ -31,21 +30,20 @@
 .content {
     width: 100%;
     height: 100%;
-    padding: 2rem 6rem;
+    padding: 4rem 6rem;
+
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
+    justify-content: flex-start;
+    align-items: flex-start;
+    
     & section {
-        width: 50%;
+        width: 100%;
         height: 100%;
-
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
-
         gap: 4rem;
     }
 }
