--- a/src/components/calendar/calendar.component.html
+++ b/src/components/calendar/calendar.component.html
@@ -1,25 +1,25 @@
-<div class="view">
+<div class="header">
+    <button (click)="previousHandler()"> {{previousMonthLabel}} </button>
+    <p> {{currentMonthLabel + " " + currentYear}} </p>
+    <button (click)="nextHandler()"> {{nextMonthLabel}} </button>
+</div>
 
-    <div class="header">
-        <button (click)="previousHandler()"> {{previousMonthLabel}} </button>
-        <p> {{currentMonthLabel + " " + currentYear}} </p>
-        <button (click)="nextHandler()"> {{nextMonthLabel}} </button>
+<div class="content">
+
+    <div class="weekday-container" *ngFor="let day of weekdayLabels">
+        <p> {{day[0]}} </p>
     </div>
-
-    <div class="content">
-
-        <div *ngFor="let day of weekdayLabels">
-            <p class="day"> {{day[0]}} </p>
+    
+    <div class="date-container" *ngFor="let date of visibleDates">
+        <div></div>
+        <p class="date" [ngClass]="{
+            'date-current': date === today.getDate() && currentMonth == today.getMonth() && currentYear === today.getFullYear(),
+            'date-selected': selectedDate && date === selectedDate.getDate() && currentMonth === selectedDate.getMonth() && currentYear === selectedDate.getFullYear(),
+            'date-hidden': date === 0,
+        }" (click)="selectHandler(date)"> {{ date }} </p>
+        <div> 
+            <p *ngIf="hasContent(date)"> . . . </p>
         </div>
         
-        <div class="date-container" *ngFor="let date of visibleDates">
-            <p class="date" [ngClass]="{
-                'date-current': date === today.getDate() && currentMonth == today.getMonth() && currentYear === today.getFullYear(),
-                'date-selected': selectedDate && date === selectedDate.getDate() && currentMonth === selectedDate.getMonth() && currentYear === selectedDate.getFullYear(),
-                'date-hidden': date === 0,
-            }" (click)="selectHandler(date)"> {{ date }} </p>
-            <p class="date-hasContent" *ngIf="hasContent(date)"> . . . </p>
-        </div>
     </div>
-
 </div>
