--- a/src/components/calendar/calendar.component.scss
+++ b/src/components/calendar/calendar.component.scss
@@ -1,102 +1,127 @@
-
 :host {
-    width: 100%;
-    height: 100%;
-}
-
-.view {
     width: 400px;
-    height: 350px;
-
+    height: 400px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    border-radius: 8px;
+    overflow: scroll;
+    background-color: white;
 }
 
 .header {
     width: 100%;
     height: 50px;
+    background-color: #2a3746;
 
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-
+    
     padding: 1rem;
 
     & button {
         font-weight: bold;
         text-transform: uppercase;
-
         border:none;
         outline:none;
         line-height: 0;
         cursor: pointer;
+        color: #ffffff;
     }
 
     & p {
         font-weight: bold;
+        color: #ffffff;
     }
 }
 
 .content {
     width: 100%;
-    height: 100%;
-
-    border-radius: 8px;
-    background-color: white;
-    padding: 0.5rem 1rem;
+    height: auto;
 
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
 
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-
-    & div {
+    & .weekday-container {
         width: calc(100%/7);
         aspect-ratio: 1;
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    & .day {
-        text-transform: uppercase;
-        font-weight: bold;
-        user-select: none;
-    }
-
-    & .date-container {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        & p {
+            text-transform: uppercase;
+            font-weight: bold;
+            user-select: none;
+        }
     }
 
-    & .date-hasContent {
-        color: black;
+    & .date-container {
+        width: calc(100%/7);
+        aspect-ratio: 1;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+
+        & .date {
+            cursor: pointer;
+            user-select: none;
+        }
+    
+        & .date-current {
+            width: 50%;
+            aspect-ratio: 1;
+    
+            display: flex;
+            align-items: center;
+            justify-content: center;
+    
+            border-radius: 50%;
+            background-color: #2a3746;
+            color: #ffffff;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+            font-weight: bold;
+        }
+    
+        & .date-selected {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+    
+            width: 50%;
+            aspect-ratio: 1;
+    
+            border-radius: 50%;
+            background-color: #2a3746;
+            color: #ffffff;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+            font-weight: bold;
+        }
+    
+        & .date-hidden {
+            display: none;
+        }
+
+        & div {
+            width: 100%;
+            height: 25%;
+
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+
+            & p {
+                font-weight: bold;
+            }
+
+
+        }   
     }
 
-    & .date {
-        cursor: pointer;
-        user-select: none;
-    }
-
-    & .date-current {
-        border-radius: 50%;
-        background-color: rgb(255, 245, 219);
-        padding: 8px;
-        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    }
-
-    & .date-selected {
-        border-radius: 50%;
-        background-color: wheat;
-        padding: 8px;
-        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    }
-
-    & .date-hidden {
-        display: none;
-    }
 }
