--- a/src/components/list/list.component.scss
+++ b/src/components/list/list.component.scss
@@ -1,26 +1,27 @@
 :host{
-    width: 100%;
-    height: 100%;
-}
-
-.view {
-    width: 100%;
+    width: 500px;
     height: 100%;
 
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    
+    background-color: white;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    border-radius: 8px;
+    overflow: hidden;
 }
 
 .header {
-
+    background-color: #2a3746;
+    color: #ffffff;
     width: 100%;
     height: 50px;
     
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 
     padding: 0 0.5rem;
@@ -44,12 +45,8 @@
 .list {
     width: 100%;
     height: 100%;
-
     overflow-y: scroll;
-    border-radius: 8px;
-    background-color: white;
     list-style: none;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .item {
@@ -80,11 +77,12 @@
         cursor: pointer;
     }
     & input:checked {
-        background-color: wheat;
+        background-color: #2a3746;
     }
 
     & label {
         cursor: pointer;
+        font-size: 14px;
     }
 }
 
@@ -106,13 +104,15 @@
         border: none;
         outline: none;
         cursor: text;
+        font-size: small;
     }
 
     & label {
-        width: 1.3em;
-        height: 1.3em;
-        text-align: center;
-        vertical-align: middle;
+        width: 2em;
+        height: 2em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         font-weight: bold;
     }
 }
