--- a/src/components/actions/actions.component.html
+++ b/src/components/actions/actions.component.html
@@ -1,8 +1,8 @@
 <div class="header">
-    <p> {{label}} </p>
+    <h2> {{labelTitle}} </h2>
 </div>
 
 <div class="content">
-    <button class="button" [ngClass]="{'button-selected': tag === selectedTag}" (click)="selectHandler(tag)"
+    <button class="button" [ngClass]="{'button-selected': tag === selectedTag}" (click)="onSelectHandler(tag)"
         *ngFor="let tag of availableTags"> {{tag}} </button>
 </div>
