--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,26 @@
-
-
-
-
-<div class="app">
-
-  <header class="header">
-    <h1> {{title}} </h1>
+  <div class="app" [ngClass]="{'darkmode': darkmode}">
+  <header>
+    <h1> {{labelTitle}} </h1>
+    <button (click)="setDarkMode()"> {{labelDarkMode}} </button>
   </header>
 
-  <main class="content">
+  <main>
     <section>
-      <app-calendar [inputEvents]="events" (outputDate)="receiveSelectedDate($event)" />
-      <app-actions [inputEvents]="events" (outputTag)="receiveSelectedTag($event)" />
+      <div class="placeholder-1" >
+        <app-calendar [inputEvents]="events" (outputDate)="receiveSelectedDate($event)" />
+      </div>
+      <div class="placeholder-2" >
+        <app-actions [inputEvents]="events" (outputTag)="receiveSelectedTag($event)" />
+      </div>      
     </section>
     <section>
-      <app-list [inputDate]="selectedDate" [inputTag]="selectedTag" (outputEvents)="receiveCalendarEvents($event)" />
+      <div class="placeholder-3" >
+        <app-list [inputDate]="selectedDate" [inputTag]="selectedTag" (outputEvents)="receiveCalendarEvents($event)" />
+      </div>
     </section>
   </main>
 
-  <footer class="footer">
-    <p> {{owner}} </p>
+  <footer>
+    <p> {{labelCopyright}} </p>
   </footer>
-
 </div>
