--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,65 +1,76 @@
 .app {
-    width: 100%;
-
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-
-    background-color: #e6e8ec;
+    gap: 4rem;
+    width: 100%;
+    background-color: var(--background-color);
 }
 
-.header {
-    width: 100%;
-    padding: 0 1rem;
-
+header {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
 
-    background-color: #f5f6f8;
+    width: 100%;
+    height: 50px;
+    padding: 0 1rem;
+    background-color: var(--foreground-color);
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
-    & h1 {
-        font-size: larger;
-        line-height: 50px;
+
+    & button {
+        color: var(--text-color-black);
+        background-color: var(--background-color);
+        height: 70%;
+        width: 80px;
+        border-radius: 8px;
     }
 }
 
-.content {
-    width: 100%;
-    height: 100%;
-    padding: 4rem 6rem;
-
+main {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-start;
-    
+    flex-wrap: wrap;
+    width: 70%;
+    gap: 4rem;
+
     & section {
-        width: 100%;
-        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
         gap: 4rem;
+
+        width: 45%;
+        height: 100%;
+    }
+
+    & .placeholder-1 {
+        width: 100%;
+        aspect-ratio: 1;
+    }
+    & .placeholder-2 {
+        width: 100%;
+        height: auto;
+    }
+    & .placeholder-3 {
+        width: 100%;
+        height: auto;
     }
 }
 
-.footer {
-    width: 100%;
-    margin-top: auto;
-
+footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-
-    & p {
-        font-size: medium;
-        font-weight: 100;
-        line-height: 50px;
-    }
+    
+    width: 100%;
+    height: 50px;
+    margin-top: auto;
 }
