--- a/src/components/actions/actions.component.scss
+++ b/src/components/actions/actions.component.scss
@@ -1,64 +1,53 @@
 :host {
-    width: 400px;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
 
-    background-color: white;
+    width: 100%;
+    height: 100%;
+    background-color: var(--midground-color);
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     border-radius: 8px;
     overflow: hidden;
 }
 
-
 .header {
-    width: 100%;
-    height: 50px;
-    padding: 0 0.5rem;
-
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 
-    background-color: #2a3746;
-
-    & p {
-        font-size: medium;
-        font-weight: bold;
-        color: #ffffff;
-    }
+    width: 100%;
+    height: 50px;
+    padding: 0 0.5rem;
+    background-color: var(--foreground-color);
 }
 
 .content {
-    width: 100%;
-    padding: 2rem;
-    overflow-x: scroll;
-
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     gap: 1rem;
-}
 
-.button {
-    border: none;
-    background-color: none;
-    text-decoration: none;
-    font-size: x-small;
-    font-weight: bold;
-    cursor: pointer;
+    width: 100%;
+    padding: 2rem;
+    overflow-x: scroll;
 
-    height: 65px;
-    aspect-ratio: 1;
-    border-radius: 50%;
-    background-color: #f5f6f8;
-    color: #000000;
-
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-}
-
-.button-selected {
-    background-color: #2a3746;
-    color: #ffffff;
+    & .button {        
+        height: 65px;
+        aspect-ratio: 1;
+        border-radius: 50%;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        background-color: var(--midground-color);
+        color: var(--text-color-black);
+        font-size: 12px;
+    }
+    
+    & .button-selected {
+        background-color: var(--foreground-color);
+        color: var(--text-color-white);
+        border: solid 1px var(--text-color-black);
+    }
 }
