--- a/src/components/calendar/calendar.component.html
+++ b/src/components/calendar/calendar.component.html
@@ -1,24 +1,23 @@
 <div class="header">
-    <button (click)="previousHandler()"> {{previousMonthLabel}} </button>
-    <p> {{currentMonthLabel + " " + currentYear}} </p>
-    <button (click)="nextHandler()"> {{nextMonthLabel}} </button>
+    <button (click)="onPreviousMonthHandler()"> {{previousMonthLabel}} </button>
+    <h2> {{currentMonthLabel + " " + currentYear}} </h2>
+    <button (click)="onNextMonthHandler()"> {{nextMonthLabel}} </button>
 </div>
 
 <div class="content">
 
     <div class="weekday-container" *ngFor="let day of weekdayLabels">
-        <p> {{day[0]}} </p>
+        <h4> {{day[0]}} </h4>
     </div>
     
     <div class="date-container" *ngFor="let date of visibleDates">
         <div></div>
-        <p class="date" [ngClass]="{
-            'date-current': date === today.getDate() && currentMonth == today.getMonth() && currentYear === today.getFullYear(),
-            'date-selected': selectedDate && date === selectedDate.getDate() && currentMonth === selectedDate.getMonth() && currentYear === selectedDate.getFullYear(),
-            'date-hidden': date === 0,
-        }" (click)="selectHandler(date)"> {{ date }} </p>
+        <button class="date" [ngClass]="{
+            'date-selected': isDateCurrent(date) || isDateSelected(date),
+            'date-hidden': isDateHidden(date),
+        }" (click)="onSelectDateHandler(date)"> {{ date }} </button>
         <div> 
-            <p *ngIf="hasContent(date)"> . . . </p>
+            <p *ngIf="dateHasContent(date)"> . . . </p>
         </div>
         
     </div>
