--- a/src/components/calendar/calendar.component.scss
+++ b/src/components/calendar/calendar.component.scss
@@ -1,106 +1,75 @@
 :host {
-    width: 400px;
-    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    width: 100%;
+    height: 100%;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     border-radius: 8px;
     overflow: scroll;
-    background-color: white;
+    background-color: var(--midground-color);
 }
 
 .header {
-    width: 100%;
-    height: 50px;
-    background-color: #2a3746;
-
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    
+
+    width: 100%;
+    height: 50px;
+    background-color: var(--foreground-color);
     padding: 1rem;
 
     & button {
-        font-weight: bold;
-        text-transform: uppercase;
-        border:none;
-        outline:none;
-        line-height: 0;
-        cursor: pointer;
-        color: #ffffff;
-    }
-
-    & p {
-        font-weight: bold;
-        color: #ffffff;
+        color: var(--text-color-white);
     }
 }
 
 .content {
-    width: 100%;
-    height: auto;
-
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     flex-wrap: wrap;
 
+    width: 100%;
+    height: auto;
+
     & .weekday-container {
-        width: calc(100%/7);
-        aspect-ratio: 1;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
 
-        & p {
-            text-transform: uppercase;
-            font-weight: bold;
-            user-select: none;
-        }
+        width: calc(100%/7);
+        aspect-ratio: 1;
     }
 
     & .date-container {
-        width: calc(100%/7);
-        aspect-ratio: 1;
-
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
 
+        width: calc(100%/7);
+        aspect-ratio: 1;
+
         & .date {
-            cursor: pointer;
-            user-select: none;
-        }
-    
-        & .date-current {
-            width: 50%;
-            aspect-ratio: 1;
-    
             display: flex;
             align-items: center;
             justify-content: center;
-    
-            border-radius: 50%;
-            background-color: #2a3746;
-            color: #ffffff;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-            font-weight: bold;
+            width: 50%;
+            aspect-ratio: 1;
         }
     
         & .date-selected {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-    
-            width: 50%;
-            aspect-ratio: 1;
-    
             border-radius: 50%;
-            background-color: #2a3746;
-            color: #ffffff;
+            background-color: var(--foreground-color);
+            color: var(--text-color-white);
             box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-            font-weight: bold;
+            border: solid 1px var(--text-color-black);
         }
     
         & .date-hidden {
@@ -108,19 +77,13 @@
         }
 
         & div {
-            width: 100%;
-            height: 25%;
-
             display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
 
-            & p {
-                font-weight: bold;
-            }
-
-
+            width: 100%;
+            height: 25%;
         }   
     }
 
