--- a/src/components/list/list.component.scss
+++ b/src/components/list/list.component.scss
@@ -1,227 +1,167 @@
 :host{
-    width: 500px;
-    height: 100%;
-
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+
+    width: 100%;
+    height: 100%;
     
-    background-color: white;
+    background-color: var(--midground-color);
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     border-radius: 8px;
     overflow: hidden;
 }
 
 .header {
-    background-color: #2a3746;
-    color: #ffffff;
-    width: 100%;
-    height: 50px;
-    
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 
+    width: 100%;
+    height: 50px;
     padding: 0 0.5rem;
-
-    & p {
-        font-size: medium;
-        font-weight: bold;
-    }
-    & button {
-        font-size: larger;
-        text-align: center;
-
-        border: none;
-        outline: none;
-        line-height: 0;
-        cursor: pointer;
-    }
-    
+    background-color: var(--foreground-color);    
 }
 
-.list {
+ol {
     width: 100%;
-    height: 100%;
     overflow-y: scroll;
     list-style: none;
-}
 
-.item {
-    width: 100%;
-    height: 50px;
-    
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 1rem;
-
-    padding: 0 1rem;
-    border-bottom: solid 1px rgb(210, 210, 210);
-
-    & input {
-        width: 2em;
-        height: 2em;
-
-        background-color: white;
-        border-radius: 50%;
-        border: 1px solid #ddd;
-        
-        vertical-align: middle;
-        appearance: none;
-        -webkit-appearance: none;
-        outline: none;
-        cursor: pointer;
-    }
-    & input:checked {
-        background-color: #2a3746;
-    }
-
-    & label {
-        cursor: pointer;
-        font-size: 14px;
-    }
-}
-
-.add {
-    width: 100%;
-    height: 50px;
-    
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 1rem;
-
-    padding: 0 1rem;
-    border-bottom: solid 1px rgb(210, 210, 210);
-
-    & input {
-        width: 100%;
-        border: none;
-        outline: none;
-        cursor: text;
-        font-size: small;
-    }
-
-    & label {
-        width: 2em;
-        height: 2em;
+    & li {
         display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
         align-items: center;
-        justify-content: center;
-        font-weight: bold;
+        gap: 1rem;
+    
+        width: 100%;
+        height: 50px;
+        
+        padding: 0 1rem;
+        border-bottom: solid 1px rgb(210, 210, 210);
+    }
+
+    & li:last-child {
+        border-bottom: none;
     }
 }
+
+.input-checkbox {
+    width: 2em;
+    height: 2em;
+
+    background-color: var(--midground-color);
+    border-radius: 50%;
+    border: 1px solid #ddd;
+
+    cursor: pointer;
+}
+
+.input-checkbox:checked {
+    background-color: var(--foreground-color);
+}
+
+.label-listItem {
+    cursor: pointer;
+}
+
+.input-text {
+    width: 100%;
+    height: 100%;
+    background-color: var(--midground-color);
+}
+
+.label-add {
+    width: 2em;
+    height: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 
 .backdrop {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    height: 100vh;
+
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.7);
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .modal {
-    width: 30%;
-    height: 70%;
-    background-color: white;
-    border-radius: 8px;
-    padding: 2rem;
-
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+
+    width: 30%;
+    height: 70%;
+
+    background-color: var(--midground-color);
+    border-radius: 8px;
+    padding: 2rem;
 }
 
-.modalHeader {
-    width: 100%;
+.modal-header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    
-    & p {
-        font-size: large;
-        font-weight: bold;
-    }
 
-    & button {
-        background-color: transparent;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        font-size: large;
-        font-weight: bold;
-    }
+    width: 100%;
 }
 
-.modalContent {
-    width: 100%;
-    height: 100%;
-    gap: 1.5rem;
-
+.modal-main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    gap: 1rem;
 
-    & section {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        gap: 0.5rem;
-    }
-
+    width: 100%;
+    height: 100%;
+    
     & div {
-        width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        width: 100%;
     }
 
     & label {
-        font-weight: 100;
         width: 200px;
     }
 
     & input {
         width: 100%;
-        border: none;
-        outline: none;
         border-radius: 8px;
-        background-color: rgb(210, 212, 255);
+        background-color: var(--background-color);
         padding: 0.5rem;
     }
 }
 
-.modalFooter {
-    width: 100%;
-    
+.modal-footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
 
+    width: 100%;
+    
     & button {
-        background-color: rgb(210, 212, 255);
-        border: none;
-        outline: none;
-        cursor: pointer;
-        font-size: small;
-        font-weight: bold;
+        background-color: var(--foreground-color);
+        color: var(--text-color-white);
         padding: 0.5rem;
         border-radius: 8px;
     }
