--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,97 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
 }
+
+body {
+    background-color: var(--background-color);
+}
+
+:root {
+    --background-color: #cccccc;
+    --midground-color: #f5f6f8;
+    --foreground-color: #003049;
+    --text-color-black: #000000;
+    --text-color-white: #ffffff;
+}
+
+.darkmode {
+    --background-color: #001623;
+    --midground-color: #003049;
+    --foreground-color: #005684;
+    --text-color-black: #ffffff;
+    --text-color-white: #ffffff;
+}
+
+.legitmode {
+    --background-color: #cccccc;
+    --midground-color: #f5f6f8;
+    --foreground-color: #003049;
+    --text-color-black: #000000;
+    --text-color-white: #ffffff;
+}
+
+.cloudmode {
+    --background-color: rgb(100, 160, 197);
+    --midground-color: #f5f6f8;
+    --foreground-color: rgb(25,45,70);
+    --text-color-black: #000000;
+    --text-color-white: #ffffff;
+}
+
+
+h1 {
+    color: var(--text-color-white);
+    user-select: none;
+
+    font-size: 18px;
+    font-weight: 400;
+}
+
+h2 {
+    color: var(--text-color-white);
+    user-select: none;
+
+    font-size: 16px;
+    font-weight: 400;
+}
+
+h3 {
+    color: var(--text-color-black);
+    user-select: none;
+
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+h4 {
+    color: var(--text-color-black);
+    user-select: none;
+
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+p, input, label, button {
+    font-size: 14px;
+    font-weight: 300;
+    color: var(--text-color-black)
+}
+
+button {
+    border:none;
+    outline:none;
+    background-color: transparent;
+    user-select: none;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+input {
+    border: none;
+    appearance: none;
+    outline: none;
+    cursor: text;
+}
+
