--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,26 +19,6 @@ header {
     padding: 0 1rem;
     background-color: var(--foreground-color);
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-
-    & div {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
-        align-items: center;
-        gap: 2rem;
-
-        width: auto;
-        height: 100%;
-
-        & button {
-            color: var(--text-color-black);
-            background-color: var(--background-color);
-            height: 70%;
-            width: 80px;
-            border-radius: 8px;
-        }
-    }
-
 }
 
 main {
@@ -149,4 +129,48 @@ footer {
         width: 40%;
     }
     }
+}
+
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    width: 150px;
+    height: 70%;
+    & button {
+        color: var(--text-color-black);
+        background-color: var(--background-color);
+        width: 100%;
+        height: 100%;
+        font-weight: 500;
+    }
+}
+
+.dropdown-content {
+    display: none;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 1rem;
+
+    position: absolute;
+
+    width: 100%;
+    padding: 1rem 0.5rem;
+    
+    background-color: var(--midground-color);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); 
+
+    
+    & button {
+        width: 100%;
+        height: 40px;
+        font-weight: 500;
+        border-radius: 8px;
+    }
+
+}
+
+.dropdown:hover .dropdown-content {
+    display: flex;
 }
