--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -25,8 +25,6 @@
 
       </div>
     </div>
-
-    
   </section>
 
   <section>
@@ -39,7 +37,7 @@
           type="email"
           placeholder="Email"
         />
-        <button type="submit" [disabled]="loading">
+        <button type="submit">
           {{ '>' }}
         </button>
     </form>
