--- a/src/components/settings/settings.component.scss
+++ b/src/components/settings/settings.component.scss
@@ -12,35 +12,79 @@ form {
         color: var(--text-color-black);
     }
 
-    & section {
+}
+
+.avatar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    
+   & div {
+        width: 150px;
+        aspect-ratio: 1;
+        border-radius: 50%;
+        background-color: var(--background-color);
+        overflow: hidden;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    
+        & img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+   & label {
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
-        gap: 1rem;
-        width: 50%;
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        background-color: var(--foreground-color);
+        color: var(--text-color-white);
+        cursor: pointer;
     }
-    
+
+}
+
+.information {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1rem;
+
     & div {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
         width: 100%;
+
+        & label {
+            width: 100px;
+        }
+    
+        & input {
+            width: 100%;
+            height: 35px;
+            padding: 0 1rem;
+            border-radius: 8px;
+            background-color: var(--background-color);
+            color: var(--text-color-black);
+        }
     }
 
-    & label {
-        width: 100px;
-    }
+}
 
-    & input {
-        width: 100%;
-        height: 35px;
-        padding: 0 1rem;
-        border-radius: 8px;
-        background-color: var(--background-color);
-        color: var(--text-color-black);
-    }
+.actions {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 
     & button {
         width: 100px;
@@ -48,7 +92,5 @@ form {
         border-radius: 8px;
         background-color: var(--foreground-color);
         color: var(--text-color-white);
-        
     }
-
 }
