--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,176 +1,221 @@
 .app {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 4rem;
-    width: 100%;
-    background-color: var(--background-color);
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	gap: 4rem;
+	width: 100%;
+	background-color: var(--background-color);
 }
 
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
 
-    width: 100%;
-    height: 50px;
-    padding: 0 1rem;
-    background-color: var(--foreground-color);
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	width: 100%;
+	height: 50px;
+	padding: 0 1rem;
+	background-color: var(--foreground-color);
+	box-shadow:
+		0 1px 3px rgba(0, 0, 0, 0.12),
+		0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 90%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 90%;
 }
 
 .mainView {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    gap: 4rem;
-    width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	gap: 4rem;
+	width: 100%;
 
-    & .placeholder-1 {
-        width: 100%;
-        aspect-ratio: 1;
-    }
-    & .placeholder-2 {
-        width: 100%;
-    }
-    & .placeholder-3 {
-        width: 100%;
-    }
+	& .placeholder-1 {
+		width: 100%;
+		aspect-ratio: 1;
+	}
+	& .placeholder-2 {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: flex-start;
+
+		width: 100%;
+		gap: 2rem;
+
+		& * {
+			width: 100%;
+		}
+	}
 }
 
-.settingsView {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+update-view {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 
-    width: 60%;
-    height: 70vh;
-
-    background-color: var(--midground-color);
-    border-radius: 8px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); 
+	background: var(--midground-color);
+	width: 400px;
+	height: 70vh;
+	border-radius: 8px;
+	box-shadow:
+		0 1px 3px rgba(0, 0, 0, 0.12),
+		0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-.loginView {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+settings-view {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 
-    background: var(--midground-color);
-    width: 400px;
-    height: 450px;
-    border-radius: 8px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); 
+	background: var(--midground-color);
+	width: 400px;
+	height: 70vh;
+	border-radius: 8px;
+	box-shadow:
+		0 1px 3px rgba(0, 0, 0, 0.12),
+		0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+login-view {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	background: var(--midground-color);
+	width: 400px;
+	height: 450px;
+	border-radius: 8px;
+	box-shadow:
+		0 1px 3px rgba(0, 0, 0, 0.12),
+		0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    
-    width: 100%;
-    height: 50px;
-    margin-top: auto;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+
+	width: 100%;
+	height: 50px;
+	margin-top: auto;
 }
 
-@media (min-width: 600px)  {
-    main {
-        width: 80%;
-    }
+@media (min-width: 600px) {
+	main {
+		width: 80%;
+	}
 }
 
-@media (min-width: 700px)  {
-    main {
-        width: 70%;
-    }
+@media (min-width: 700px) {
+	main {
+		width: 70%;
+	}
 }
 
-@media (min-width: 800px)  {
-    main {
-        width: 60%;
-    }
+@media (min-width: 800px) {
+	main {
+		width: 60%;
+	}
 }
 
-@media (min-width: 900px)  {
-    main {
-        width: 50%;
-    }
+@media (min-width: 900px) {
+	main {
+		width: 50%;
+	}
 }
 
-@media (min-width: 1150px)  {
-    main {
-        width: 80%;
-        justify-content: space-between;
-    }
+@media (min-width: 1150px) {
+	main {
+		width: 80%;
+		justify-content: space-between;
+	}
 
-    .mainView {
-    & .placeholder-1 {
-        width: 40%;
-    }
-    & .placeholder-2 {
-        width: 50%;
-    }
-    & .placeholder-3 {
-        width: 40%;
-    }
-    }
+	.mainView {
+		& .placeholder-1 {
+			width: 40%;
+		}
+		& .placeholder-2 {
+			width: 50%;
+		}
+	}
 }
-
 
 .dropdown {
-    position: relative;
-    display: inline-block;
-    width: 150px;
-    height: 70%;
-    & button {
-        color: var(--text-color-black);
-        background-color: var(--background-color);
-        width: 100%;
-        height: 100%;
-        font-weight: 500;
-    }
+	position: relative;
+	display: inline-block;
+	width: 150px;
+	height: 70%;
+
+	& button {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-start;
+		align-items: center;
+		gap: 0.5rem;
+
+		width: 100%;
+		height: 100%;
+		padding: 0 0.5rem;
+
+		color: var(--text-color-black);
+		background-color: var(--background-color);
+		font-weight: 500;
+
+		& div {
+			width: 25px;
+			aspect-ratio: 1;
+			border-radius: 50%;
+			overflow: hidden;
+			background-color: var(--midground-color);
+
+			& img {
+				width: 100%;
+				height: 100%;
+			}
+		}
+	}
 }
 
 .dropdown-content {
-    display: none;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 1rem;
+	display: none;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	gap: 1rem;
 
-    position: absolute;
+	position: absolute;
 
-    width: 100%;
-    padding: 1rem 0.5rem;
-    
-    background-color: var(--midground-color);
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); 
+	width: 100%;
+	padding: 1rem 0.5rem;
 
-    
-    & button {
-        width: 100%;
-        height: 40px;
-        font-weight: 500;
-        border-radius: 8px;
-    }
+	background-color: var(--midground-color);
+	box-shadow:
+		0 1px 3px rgba(0, 0, 0, 0.12),
+		0 1px 2px rgba(0, 0, 0, 0.24);
 
+	& button {
+		width: 100%;
+		height: 40px;
+		font-weight: 500;
+		border-radius: 8px;
+	}
 }
 
 .dropdown:hover .dropdown-content {
-    display: flex;
+	display: flex;
 }
