--- a/src/components/actions/actions.component.scss
+++ b/src/components/actions/actions.component.scss
@@ -1,53 +1,58 @@
-:host {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+.view {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
 
-    width: 100%;
-    height: 100%;
-    background-color: var(--midground-color);
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    border-radius: 8px;
-    overflow: hidden;
-}
+	width: 100%;
+	height: 100%;
 
-.header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+	background-color: var(--midground-color);
+	box-shadow:
+		0 1px 3px rgba(0, 0, 0, 0.12),
+		0 1px 2px rgba(0, 0, 0, 0.24);
+	border-radius: 8px;
+	overflow: hidden;
 
-    width: 100%;
-    height: 50px;
-    padding: 0 0.5rem;
-    background-color: var(--foreground-color);
-}
+	& .header {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
 
-.content {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 1rem;
+		width: 100%;
+		height: 50px;
+		padding: 0 0.5rem;
+		background-color: var(--foreground-color);
+	}
 
-    width: 100%;
-    padding: 2rem;
-    overflow-x: scroll;
+	& .content {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-start;
+		align-items: center;
+		gap: 1rem;
 
-    & .button {        
-        height: 65px;
-        aspect-ratio: 1;
-        border-radius: 50%;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        background-color: var(--midground-color);
-        color: var(--text-color-black);
-        font-size: 12px;
-    }
-    
-    & .button-selected {
-        background-color: var(--foreground-color);
-        color: var(--text-color-white);
-        border: solid 1px var(--text-color-black);
-    }
+		width: 100%;
+		padding: 2rem;
+		overflow-x: scroll;
+
+		& .button {
+			height: 65px;
+			aspect-ratio: 1;
+			border-radius: 50%;
+			box-shadow:
+				0 1px 3px rgba(0, 0, 0, 0.12),
+				0 1px 2px rgba(0, 0, 0, 0.24);
+			background-color: var(--midground-color);
+			color: var(--text-color-black);
+			font-size: 12px;
+		}
+
+		& .button-selected {
+			background-color: var(--foreground-color);
+			color: var(--text-color-white);
+			border: solid 1px var(--text-color-black);
+		}
+	}
 }
