--- a/src/components/list/list.component.scss
+++ b/src/components/list/list.component.scss
@@ -1,168 +1,97 @@
-:host{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+.view {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
 
-    width: 100%;
-    height: 100%;
-    
-    background-color: var(--midground-color);
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    border-radius: 8px;
-    overflow: hidden;
-}
+	width: 100%;
+	height: 100%;
 
-.header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+	background-color: var(--midground-color);
+	box-shadow:
+		0 1px 3px rgba(0, 0, 0, 0.12),
+		0 1px 2px rgba(0, 0, 0, 0.24);
+	border-radius: 8px;
+	overflow: hidden;
 
-    width: 100%;
-    height: 50px;
-    padding: 0 0.5rem;
-    background-color: var(--foreground-color);    
-}
+	& .header {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
 
-ol {
-    width: 100%;
-    overflow-y: scroll;
-    list-style: none;
+		width: 100%;
+		height: 50px;
+		padding: 0 0.5rem;
+		background-color: var(--foreground-color);
+	}
 
-    & li {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 1rem;
-    
-        width: 100%;
-        height: 50px;
-        
-        padding: 0 1rem;
-        border-bottom: solid 1px rgb(210, 210, 210);
-    }
+	& .content {
+		overflow-y: scroll;
+		width: 100%;
 
-    & li:last-child {
-        border-bottom: none;
-    }
-}
+		& li {
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-start;
+			align-items: center;
+			gap: 1rem;
 
-.input-checkbox {
-    width: 2em;
-    height: 2em;
+			width: 100%;
+			height: 50px;
 
-    background-color: var(--midground-color);
-    border-radius: 50%;
-    border: 1px solid #ddd;
+			padding: 0 1rem;
+			border-bottom: solid 1px rgb(210, 210, 210);
+		}
 
-    cursor: pointer;
-}
+		& li:last-child {
+			border-bottom: none;
+		}
 
-.input-checkbox:checked {
-    background-color: var(--foreground-color);
-}
+		& input {
+			width: 2em;
+			height: 2em;
 
-.label-listItem {
-    cursor: pointer;
-}
+			background-color: var(--midground-color);
+			border-radius: 50%;
+			border: 1px solid #ddd;
 
-.input-text {
-    width: 100%;
-    height: 100%;
-    background-color: var(--midground-color);
-}
+			cursor: pointer;
+		}
 
-.label-add {
-    width: 2em;
-    height: 2em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+		& input:checked {
+			background-color: var(--foreground-color);
+		}
 
+		& label {
+			cursor: pointer;
+		}
+	}
 
-.backdrop {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	& .footer {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-start;
+		align-items: center;
+		gap: 1rem;
 
-    width: 100%;
-    height: 100vh;
+		width: 100%;
+		height: 50px;
 
-    position: fixed;
-    top: 0;
-    left: 0;
+		padding: 0 1rem;
 
-    background-color: rgba(0, 0, 0, 0.7);
-}
+		& input {
+			width: 100%;
+			height: 100%;
+			background-color: var(--midground-color);
+		}
 
-.modal {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-
-    width: 30%;
-    height: 70%;
-
-    background-color: var(--midground-color);
-    border-radius: 8px;
-    padding: 2rem;
-}
-
-.modal-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-    width: 100%;
-}
-
-.modal-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 1rem;
-
-    width: 100%;
-    height: 100%;
-    
-    & div {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-    }
-
-    & label {
-        width: 200px;
-    }
-
-    & input {
-        width: 100%;
-        border-radius: 8px;
-        background-color: var(--background-color);
-        padding: 0.5rem;
-    }
-}
-
-.modal-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-end;
-
-    width: 100%;
-    
-    & button {
-        background-color: var(--foreground-color);
-        color: var(--text-color-white);
-        padding: 0.5rem;
-        border-radius: 8px;
-    }
+		& label {
+			width: 2em;
+			height: 2em;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+	}
 }
