--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,108 +1,119 @@
-
 * {
-    margin: 0;
-    padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font-family:
+		system-ui,
+		-apple-system,
+		BlinkMacSystemFont,
+		"Segoe UI",
+		Roboto,
+		Oxygen,
+		Ubuntu,
+		Cantarell,
+		"Open Sans",
+		"Helvetica Neue",
+		sans-serif;
+	box-sizing: border-box;
 }
 
 body {
-    background-color: var(--background-color);
+	background-color: var(--background-color);
 }
 
 :root {
-    --background-color: #cccccc;
-    --midground-color: #f5f6f8;
-    --foreground-color: #003049;
-    --text-color-black: #000000;
-    --text-color-white: #ffffff;
+	--background-color: #cccccc;
+	--midground-color: #f5f6f8;
+	--foreground-color: #003049;
+	--text-color-black: #000000;
+	--text-color-white: #ffffff;
 }
 
 .darkmode {
-    --background-color: #001623;
-    --midground-color: #003049;
-    --foreground-color: #005684;
-    --text-color-black: #ffffff;
-    --text-color-white: #ffffff;
+	--background-color: #001623;
+	--midground-color: #003049;
+	--foreground-color: #005684;
+	--text-color-black: #ffffff;
+	--text-color-white: #ffffff;
 }
 
 .legitmode {
-    --background-color: #cccccc;
-    --midground-color: #f5f6f8;
-    --foreground-color: #003049;
-    --text-color-black: #000000;
-    --text-color-white: #ffffff;
+	--background-color: #cccccc;
+	--midground-color: #f5f6f8;
+	--foreground-color: #003049;
+	--text-color-black: #000000;
+	--text-color-white: #ffffff;
 }
 
 .cloudmode {
-    --background-color: rgb(100, 160, 197);
-    --midground-color: #f5f6f8;
-    --foreground-color: rgb(25,45,70);
-    --text-color-black: #000000;
-    --text-color-white: #ffffff;
+	--background-color: rgb(100, 160, 197);
+	--midground-color: #f5f6f8;
+	--foreground-color: rgb(25, 45, 70);
+	--text-color-black: #000000;
+	--text-color-white: #ffffff;
 }
 
-
 h1 {
-    color: var(--text-color-white);
-    user-select: none;
+	color: var(--text-color-white);
+	user-select: none;
 
-    font-size: 18px;
-    font-weight: 400;
+	font-size: 18px;
+	font-weight: 400;
 }
 
 h2 {
-    color: var(--text-color-white);
-    user-select: none;
+	color: var(--text-color-white);
+	user-select: none;
 
-    font-size: 16px;
-    font-weight: 400;
+	font-size: 16px;
+	font-weight: 400;
 }
 
 h3 {
-    color: var(--text-color-black);
-    user-select: none;
+	color: var(--text-color-black);
+	user-select: none;
 
-    font-size: 16px;
-    font-weight: 500;
-    text-transform: uppercase;
+	font-size: 16px;
+	font-weight: 500;
+	text-transform: uppercase;
 }
 
 h4 {
-    color: var(--text-color-black);
-    user-select: none;
+	color: var(--text-color-black);
+	user-select: none;
 
-    font-size: 14px;
-    font-weight: 500;
-    text-transform: uppercase;
+	font-size: 14px;
+	font-weight: 500;
+	text-transform: uppercase;
 }
 
-p, input, label, button {
-    font-size: 14px;
-    font-weight: 300;
-    color: var(--text-color-black)
+p,
+input,
+label,
+button {
+	font-size: 14px;
+	font-weight: 300;
+	color: var(--text-color-black);
 }
 
 button {
-    border:none;
-    outline:none;
-    background-color: transparent;
-    user-select: none;
-    text-decoration: none;
-    cursor: pointer;
+	border: none;
+	outline: none;
+	background-color: transparent;
+	user-select: none;
+	text-decoration: none;
+	cursor: pointer;
 }
 
 input {
-    border: none;
-    appearance: none;
-    -webkit-appearance: none;
-    outline: none;
-    cursor: text;
+	border: none;
+	appearance: none;
+	-webkit-appearance: none;
+	outline: none;
+	cursor: text;
 }
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus, 
-input:-webkit-autofill:active{
-    -webkit-box-shadow: 0 0 0 30px var(--midground-color) inset !important;
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+	-webkit-box-shadow: 0 0 0 30px var(--midground-color) inset !important;
 }
-
